# nexcode

./: .env.example  .nexcode.toml  README.md  calculator.py  duck_info.txt  main.py  package.json  patch.py  pyproject.toml  run_web.py  test_agent.py  test_app.py  test_calculator.py  test_run_web.py  tsconfig.json
apps/cli/: package.json
apps/web/: next.config.mjs  package.json
nexcode/: __init__.py  app.py  config.py  display.py  history.py
nexcode/agent/: __init__.py  context.py  loop.py  observer.py  planner.py  subagent.py  thinking.py
nexcode/ai/: __init__.py  auth.py  models.py  provider.py
nexcode/checkpoints/: __init__.py  diff.py  manager.py  snapshot.py  storage.py  timeline.py
nexcode/commands/: __init__.py  base.py  builtin.py  registry.py
nexcode/execution/: __init__.py  process.py  runner.py  sandbox.py
nexcode/features/: __init__.py  analytics.py  changelog.py  code_review.py  compare.py  documenter.py  explain.py  optimizer.py  pair.py  profile.py  security.py  templates.py  workspace.py
nexcode/git/: __init__.py  diff.py  engine.py  history.py
nexcode/memory/: __init__.py  long_term.py  project.py  retrieval.py  session.py  store.py
nexcode/safety/: __init__.py  audit.py  guardian.py  permissions.py  rules.py
nexcode/server/: __init__.py  api.py  session.py
nexcode/subagents/: __init__.py  coordinator.py  manager.py  pool.py  worker.py
nexcode/tools/: __init__.py  (+7 more)
tests/: test_app.py  test_calculator.py  test_config.py  test_helpers.py  test_main.py
web/: jest.config.js  next.config.ts  package-lock.json  package.json
(+45 files in other folders)
