[project]
name = "nexcode"
version = "0.1.0"
description = "NexCode — A powerful, production-grade AI coding assistant for the terminal."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "NexCode Team" },
]
keywords = ["ai", "coding-assistant", "cli", "terminal", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "anthropic>=0.39.0",
    "litellm>=1.50.0",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "gitpython>=3.1.0",
    "httpx>=0.27.0",
    "pathspec>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.7",
    "ddgs>=9.11.2",
    "pytest>=9.0.2",
]

[project.scripts]
nexcode = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexcode"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
